# orchestrator-model

./: .gitignore  ARCHITECTURE_SUMMARY.md  CI_CD_STATUS.md  DOCKER_BUILD_FIX.md  FINAL_DELIVERY_SUMMARY.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md
.github/workflows/: cd-production.yml  ci.yml
ci-cd/.github/workflows/: cd-production.yml  ci.yml
database/schemas/: 001_initial_schema.sql
docs/: PRODUCTION_ROADMAP.md  TRAINING_PIPELINE.md
docs/api/: openapi.yaml
docs/architecture/: 01-high-level-design.md  02-system-components.md
infrastructure/kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
services/xray-ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/xray-ai-service/configs/: README.md  config.yaml  diseases.yaml  prompts.yaml
services/xray-ai-service/src/: __init__.py  main.py
services/xray-ai-service/src/api/: __init__.py  dependencies.py  middleware.py
services/xray-ai-service/src/api/routes/: __init__.py  explain.py  feedback.py  health.py  predict.py
services/xray-ai-service/src/core/: __init__.py  config.py  logging.py  monitoring.py
services/xray-ai-service/src/database/: __init__.py  connection.py  models.py  repositories.py
services/xray-ai-service/src/models/: __init__.py  calibration.py  disease_heads.py  foundation.py  model_loader.py
services/xray-ai-service/src/schemas/: __init__.py  requests.py  responses.py
services/xray-ai-service/src/services/: __init__.py  explainability.py  feedback.py  inference.py  preprocessing.py  report.py
services/xray-ai-service/src/utils/: __init__.py
services/xray-ai-service/tests/: __init__.py  conftest.py
services/xray-ai-service/tests/unit/: test_basic.py  test_preprocessing.py
